window-slot-dnd: handle tab switching on hover ourselves

Since we handle envets manually.

https://bugzilla.gnome.org/show_bug.cgi?id=635485